Added finn and a few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1> Hey. I'm a big heading </h1>
-<p> Hey. I'm a paragraph element</p>
-<a href="http://google.com" target="_blank" title="Let's go to google">Click this link</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title> Test Page</title>
+</head>
+<body>
+	<h1> Hey. I'm a big heading </h1>
+	<p> Hey. I'm a <b>paragraph</b> element</p>
+	<a href="http://google.com" target="_blank" title="Let's go to google">Click this link</a><br>
+	<p> My name is <br>
+	Finn</p>
+	<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQOP975bXF9wsnoHNYZH03ZWvLtKO936STwt95PDdgDyHcWHQ21&usqp=CAU">
+</body>	
+</html>
